--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Application Structure Plan: A single-view, dashboard-style calculator. The layout uses a two-column grid on larger screens to separate user inputs from the calculated results and visualization, creating a clear, task-oriented flow. On mobile, it stacks into a single column for usability. This structure was chosen to make the tool intuitive and provide immediate feedback, which is more effective for a user's goal of quick calculation than a static page. -->
     <!-- Visualization & Content Choices: 
         - Report Info: User inputs (Capital, Risk %, Entry, Stop-Loss). Goal: User Input. Method: Interactive form with a slider for risk %. Interaction: Real-time updates on input change. Justification: Sliders and number inputs are standard and intuitive for data entry. Real-time updates provide immediate feedback. Library/Method: HTML, JS.
-        - Report Info: Calculated values (Position Size, Risk Amount). Goal: Inform. Method: Prominent display of key results. Interaction: Values update dynamically. Justification: The primary goal is to get these numbers, so they must be clear and easy to read. Library/Method: HTML, JS.
+        - Report Info: Calculated values (Position Size, Risk Amount, Total Position Value, Leverage). Goal: Inform. Method: Prominent display of key results. Interaction: Values update dynamically. Justification: The primary goal is to get these numbers, so they must be clear and easy to read. Library/Method: HTML, JS.
         - Report Info: The concept of risking a small part of capital. Goal: Compare/Relate. Method: Donut chart. Interaction: Hover tooltips showing values. Justification: A donut chart provides an immediate, powerful visual comparison of the amount at risk versus the remaining capital, making the abstract 2% rule tangible. Library/Method: Chart.js (Canvas).
         - Report Info: Explanation of the 2% rule. Goal: Inform. Method: A clear text block. Justification: Provides necessary context for users to understand the "why" behind the calculation. Library/Method: HTML.
     -->
@@ -107,6 +107,10 @@
                                 <p class="text-sm text-slate-500">Total Position Value</p>
                                 <p id="positionValueDisplay" class="text-2xl font-semibold text-slate-800">$10,000.00</p>
                             </div>
+                            <div class="p-4 bg-white rounded-lg">
+                                <p class="text-sm text-slate-500">Leverage</p>
+                                <p id="leverageDisplay" class="text-2xl font-semibold text-slate-800">1.00X</p>
+                            </div>
                             <div class="p-6 bg-teal-600 text-white rounded-lg text-center">
                                 <p class="text-base font-medium opacity-80">Calculated Position Size (Units)</p>
                                 <p id="positionSizeDisplay" class="text-4xl font-bold">0.2000</p>
@@ -124,12 +128,15 @@
 
              <!-- Explanation Section -->
             <div class="mt-12 border-t border-slate-200 pt-8">
-                <h3 class="text-xl font-semibold text-slate-900">Understanding the 2% Risk Rule</h3>
+                <h3 class="text-xl font-semibold text-slate-900">Understanding the 2% Risk Rule and Leverage</h3>
                 <p class="text-slate-600 mt-4">
                     This tool is built on a fundamental principle of risk management: never risk more than a small, predefined percentage of your total trading capital on a single trade. A common guideline, especially for new traders, is the 2% rule.
                 </p>
                 <p class="text-slate-600 mt-4">
                     By limiting your potential loss on any given trade to 2% of your capital, you protect yourself from significant drawdowns and can withstand a series of losing trades without depleting your account. This disciplined approach is crucial for long-term survival and success in volatile markets like cryptocurrency. The position size is calculated to ensure that if your stop-loss is triggered, your loss will equal your chosen risk amount.
+                </p>
+                <p class="text-slate-600 mt-4">
+                    **Leverage** allows you to control a larger position in the market with a relatively smaller amount of your own capital. The "Total Position Value" is the notional size of your trade, while "Leverage" indicates how many times your actual capital is being amplified to achieve that position. For example, a 5X leverage means you are controlling a position five times larger than your capital allocated to that trade. It's important to remember that leverage amplifies both profits and losses.
                 </p>
             </div>
         </main>
@@ -145,6 +152,7 @@
 
         const riskAmountDisplayEl = document.getElementById('riskAmountDisplay');
         const positionValueDisplayEl = document.getElementById('positionValueDisplay');
+        const leverageDisplayEl = document.getElementById('leverageDisplay');
         const positionSizeDisplayEl = document.getElementById('positionSizeDisplay');
 
         const riskChartCanvas = document.getElementById('riskChart');
@@ -172,8 +180,14 @@
             
             const positionValue = positionSize * entryPrice;
 
+            let leverage = 0;
+            if (totalCapital > 0) {
+                leverage = positionValue / totalCapital;
+            }
+
             riskAmountDisplayEl.textContent = formatCurrency(riskAmount);
             positionValueDisplayEl.textContent = formatCurrency(positionValue);
+            leverageDisplayEl.textContent = leverage.toFixed(2) + 'X';
 
             if (riskPerUnit > 0) {
                  positionSizeDisplayEl.textContent = positionSize.toFixed(4);
